--- a/StimSD/pom.xml
+++ b/StimSD/pom.xml
@@ -9,13 +9,21 @@
   <url>http://maven.apache.org</url>
   
   	<repositories>
-		<repository>
+  	<!-- 
+  		<repository>
 			<id>prime-repo</id>
 			<name>Prime Repo</name>
 			<url>https://repository.primefaces.org</url>
 		</repository>
-	</repositories>
-	
+   -->
+   <repository>
+        <id>prime-repo</id>
+        <name>PrimeFaces Maven Repository</name>
+        <url>http://repository.primefaces.org</url>
+        <layout>default</layout>
+    </repository>
+</repositories>
+  
   	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		
@@ -29,8 +37,8 @@
 		<mysql.connector.version>5.1.31</mysql.connector.version>
 		<jstl.version>1.2</jstl.version>
 		<jsf.version>2.2.13</jsf.version>
-		<primefaces.version>6.0</primefaces.version>
-		<primefaces.themes.version>1.0.9</primefaces.themes.version>
+		<primefaces.version>6.2</primefaces.version>
+		<primefaces.themes.version>1.0.10</primefaces.themes.version>
 		<mybatis.generator.version>1.3.0</mybatis.generator.version>
 		<lowagie.version>2.1.7</lowagie.version>
 		<apache.poi>3.13</apache.poi>
@@ -39,6 +47,39 @@
 	</properties>
 	
   <dependencies>
+  
+  <dependency>
+    <groupId>net.glxn</groupId>
+    <artifactId>qrgen</artifactId>
+    <version>1.4</version>
+</dependency>
+
+<dependency>
+    <groupId>net.sf.barcode4j</groupId>
+    <artifactId>barcode4j</artifactId>
+    <version>2.1</version>
+</dependency>
+
+
+  <dependency>
+    <groupId>net.bootsfaces</groupId>
+    <artifactId>bootsfaces</artifactId>
+    <version>1.4.1</version>
+</dependency>
+  
+  <!-- PDF -->
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>${lowagie.version}</version>
+		</dependency>
+		
+  <dependency>
+    <groupId>org.highfaces</groupId>
+    <artifactId>highfaces</artifactId>
+    <version>1.3</version>
+</dependency>
+
   <dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
