--- a/StimSD/pom.xml
+++ b/StimSD/pom.xml
@@ -47,7 +47,17 @@
 	</properties>
 	
   <dependencies>
-  
+  <dependency>
+		<groupId>com.lowagie</groupId>
+		<artifactId>itext</artifactId>
+		<version>2.1.0</version>
+	</dependency>
+ 
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi</artifactId>
+	    <version>3.2-FINAL</version>
+	</dependency>
   <dependency>
     <groupId>net.glxn</groupId>
     <artifactId>qrgen</artifactId>
