--- a/Proyecto-master 22/StimSD/pom.xml
+++ b/Proyecto-master 22/StimSD/pom.xml
@@ -48,6 +48,12 @@
 	
   <dependencies>
   <dependency>
+    <groupId>org.webjars.bower</groupId>
+    <artifactId>pdfmake</artifactId>
+    <version>0.1.34</version>
+</dependency>
+  
+  <dependency>
 		<groupId>com.lowagie</groupId>
 		<artifactId>itext</artifactId>
 		<version>2.1.0</version>
