--- a/Proyecto-master 22/StimSD/src/main/webapp/WEB-INF/web.xml
+++ b/Proyecto-master 22/StimSD/src/main/webapp/WEB-INF/web.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-xmlns="http://java.sun.com/xml/ns/javaee" 
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
- 
-<display-name>StimSD</display-name>
-<context-param>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <display-name>StimSD</display-name>
+  <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>WEB-INF/classes/applicationContext.xml</param-value>
   </context-param>
-<context-param>
+  <context-param>
     <param-name>primefaces.THEME</param-name>
     <param-value>bootstrap</param-value>
   </context-param>
-<context-param>
+  <context-param>
     <param-name>javax.faces.PROJECT_STAGE</param-name>
     <param-value>Development</param-value>
   </context-param>
-  
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
@@ -26,8 +21,7 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   </listener>
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
-</listener>
-  
+  </listener>
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -37,7 +31,6 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>CXFServlet</servlet-name>
     <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
@@ -47,30 +40,14 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
     <servlet-name>CXFServlet</servlet-name>
     <url-pattern>/ws/*</url-pattern>
   </servlet-mapping>
-  
-<!--   <security-constraint> -->
-<!--   	<web-resource-collection> -->
-<!--   		<web-resource-name>LockApp</web-resource-name> -->
-<!--   		<url-pattern>/*</url-pattern> -->
-<!--   	</web-resource-collection> -->
-  	
-<!--   	<user-data-constraint> -->
-<!--   		<transport-guarantee>CONFIDENTIAL</transport-guarantee> -->
-<!--   	</user-data-constraint> -->
-<!--   </security-constraint> -->
-  
-  	
-  
-  	<session-config>
-  		<session-timeout>30</session-timeout>
-  	</session-config>
-  
+  <session-config>
+    <session-timeout>30</session-timeout>
+  </session-config>
   <welcome-file-list>
     <welcome-file>login.xhtml</welcome-file>
   </welcome-file-list>
-  
   <error-page>
-    	<exception-type>java.lang.Exception</exception-type>
-    	<location>/login.xhtml</location>
-	</error-page>
+    <exception-type>java.lang.Exception</exception-type>
+    <location>/login.xhtml</location>
+  </error-page>
 </web-app>
